tests/files/type_checker_tests/should_fail/004.cmdr
//Should fail trying to index a non-arrray type
x = 3;
y = x[0];